--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         compose_ui_version = '1.3.0-beta01'
         compose_compiler_version = '1.3.0'
         accompanist_version = '0.26.2-beta'
+        ktor_version = '2.1.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
