--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,11 @@ buildscript {
         accompanist_version = '0.26.2-beta'
         ktor_version = '2.1.0'
     }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.5.21"
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
