--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         compose_compiler_version = '1.3.0'
         accompanist_version = '0.26.2-beta'
         ktor_version = '2.1.0'
+        paging_version = '3.1.1'
+        room_version = '2.5.0-alpha03'
     }
 
     dependencies {
